fix(Style): Numbers in ol now do align with top
The clearfix class caused a bug, numbers were placed at the bottom with
overlong texts. This fix also removes the need for an addintionl span in
ordered lists.

--- a/src/scss/06_utilities/_utilities.clearfix.scss
+++ b/src/scss/06_utilities/_utilities.clearfix.scss
@@ -3,8 +3,8 @@
 
   &:before,
   &:after {
-    content: " ";
-    display: table;
+    content: ' ';
+    display: flow-root;
   }
 
   &:after {
